Reimplemented directory size counting

--- a/dec7/dec7.ipynb
+++ b/dec7/dec7.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "7b29dcc5-3c8d-4434-9cbf-e5eccfa83f22",
    "metadata": {},
    "outputs": [
@@ -20,38 +20,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Adding  14848514  to  /  resulting in  14848514\n",
-      "Adding  8504156  to  /  resulting in  23352670\n",
-      "Adding  29116  to  a  resulting in  29116\n",
-      "Adding  29116  to  /  resulting in  23381786\n",
-      "Adding  2557  to  a  resulting in  31673\n",
-      "Adding  2557  to  /  resulting in  23384343\n",
-      "Adding  62596  to  a  resulting in  94269\n",
-      "Adding  62596  to  /  resulting in  23446939\n",
-      "Adding  584  to  e  resulting in  584\n",
-      "Adding  584  to  a  resulting in  94853\n",
-      "Adding  584  to  /  resulting in  23447523\n",
-      "Adding  1000  to  y  resulting in  1000\n",
-      "Adding  1000  to  e  resulting in  1584\n",
-      "Adding  1000  to  a  resulting in  95853\n",
-      "Adding  1000  to  /  resulting in  23448523\n",
-      "Adding  1000  to  y  resulting in  2000\n",
-      "Adding  1000  to  e  resulting in  2584\n",
-      "Adding  1000  to  a  resulting in  96853\n",
-      "Adding  1000  to  /  resulting in  23449523\n",
-      "Adding  1000  to  yy  resulting in  1000\n",
-      "Adding  1000  to  y  resulting in  3000\n",
-      "Adding  1000  to  e  resulting in  3584\n",
-      "Adding  1000  to  a  resulting in  97853\n",
-      "Adding  1000  to  /  resulting in  23450523\n",
-      "Adding  4060174  to  d  resulting in  4060174\n",
-      "Adding  4060174  to  /  resulting in  27510697\n",
-      "Adding  8033020  to  d  resulting in  12093194\n",
-      "Adding  8033020  to  /  resulting in  35543717\n",
-      "Adding  5626152  to  d  resulting in  17719346\n",
-      "Adding  5626152  to  /  resulting in  41169869\n",
-      "Adding  7214296  to  d  resulting in  24933642\n",
-      "Adding  7214296  to  /  resulting in  48384165\n"
+      "Adding  14848514 to /, resulting in  14848514\n",
+      "Adding   8504156 to /, resulting in  23352670\n",
+      "Adding     29116 to a, resulting in     29116\n",
+      "Adding     29116 to /, resulting in  23381786\n",
+      "Adding      2557 to a, resulting in     31673\n",
+      "Adding      2557 to /, resulting in  23384343\n",
+      "Adding     62596 to a, resulting in     94269\n",
+      "Adding     62596 to /, resulting in  23446939\n",
+      "Adding       584 to e, resulting in       584\n",
+      "Adding       584 to a, resulting in     94853\n",
+      "Adding       584 to /, resulting in  23447523\n",
+      "Adding      1000 to y, resulting in      1000\n",
+      "Adding      1000 to e, resulting in      1584\n",
+      "Adding      1000 to a, resulting in     95853\n",
+      "Adding      1000 to /, resulting in  23448523\n",
+      "Adding      1000 to y, resulting in      2000\n",
+      "Adding      1000 to e, resulting in      2584\n",
+      "Adding      1000 to a, resulting in     96853\n",
+      "Adding      1000 to /, resulting in  23449523\n",
+      "Adding      1000 to yy, resulting in      1000\n",
+      "Adding      1000 to y, resulting in      3000\n",
+      "Adding      1000 to e, resulting in      3584\n",
+      "Adding      1000 to a, resulting in     97853\n",
+      "Adding      1000 to /, resulting in  23450523\n",
+      "Adding   4060174 to d, resulting in   4060174\n",
+      "Adding   4060174 to /, resulting in  27510697\n",
+      "Adding   8033020 to d, resulting in  12093194\n",
+      "Adding   8033020 to /, resulting in  35543717\n",
+      "Adding   5626152 to d, resulting in  17719346\n",
+      "Adding   5626152 to /, resulting in  41169869\n",
+      "Adding   7214296 to d, resulting in  24933642\n",
+      "Adding   7214296 to /, resulting in  48384165\n"
      ]
     }
    ],
@@ -86,7 +86,7 @@
     "                parentnode = new_file.parent\n",
     "                while parentnode:\n",
     "                    parentnode.name['size'] += int(size)\n",
-    "                    print(\"Adding \", size, \" to \", parentnode.name['dirname'], \" resulting in \", parentnode.name['size'])\n",
+    "                    print(f\"Adding {int(size):9d} to {parentnode.name['dirname']}, resulting in {parentnode.name['size']:9d}\")\n",
     "                    parentnode = parentnode.parent\n",
     "        else:\n",
     "            ls_mode = False\n",
