--- a/dec9/dec9.ipynb
+++ b/dec9/dec9.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "61c22bb8-7e17-4572-9894-36e90b608950",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1d579db9-f786-4c5e-9d31-a33194d26774",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3c0b5997-2555-454e-964d-86be9cd82b66",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3f6fa731-9bb3-4bbd-9890-e0fcc261494c",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "33be3b83-e754-4782-afc7-3729124f938e",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "293959ad-248e-4115-8220-74c19deed78b",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "0892c00b-d827-4e01-800c-7c29371fee56",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
        "6026"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "19c9a744-fdeb-464c-a81c-ea2e9c17a385",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "114cfe72-6487-48dc-93d0-0ad56174d22a",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "fa9aa922-16b4-49d3-abbb-7ae14e35b49e",
    "metadata": {},
    "outputs": [],
@@ -199,20 +199,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "eefc5372-0574-437f-b2b7-3600375606cc",
    "metadata": {},
    "outputs": [],
    "source": [
     "prev_knot_positions = head_positions\n",
+    "knot_positions_list = []\n",
     "for i in range(num_knots):\n",
     "    knot_positions = compute_tail_coordinates(prev_knot_positions)\n",
+    "    knot_positions_list.append(knot_positions)\n",
     "    prev_knot_positions = knot_positions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "43c1f71f-c089-40a0-bc2f-f345fae852e9",
    "metadata": {},
    "outputs": [
@@ -222,7 +224,7 @@
        "2273"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "cb2522a4-c706-48f3-b64e-dcbdab0abee6",
    "metadata": {},
    "outputs": [
@@ -272,8 +274,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "0d2ea57e-c665-4d6c-8ebf-5a8fe47fdb7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iframe = 0\n",
+    "for i in range(0,len(head_positions),5):\n",
+    "    filename = f'pngs/positions_{iframe:05d}.png'\n",
+    "    fig = pygmt.Figure()\n",
+    "    fig.plot(x=head_positions[i][0], y=head_positions[i][1], style='c0.35c', color='dodgerblue2', pen='0.5p,black', frame=True, projection='X16.5c/10c', region=[-80,300,-150,80])\n",
+    "    if i > 0:\n",
+    "        fig.plot(x=knot_positions_list[0][:i,0], y=knot_positions_list[0][:i,1], pen='0.25p,dodgerblue')\n",
+    "        fig.plot(x=knot_positions_list[-1][:i,0], y=knot_positions_list[-1][:i,1], pen='0.25p,indianred')\n",
+    "    for j in range(len(knot_positions_list)):\n",
+    "        fig.plot(x=knot_positions_list[j][i][0], y=knot_positions_list[j][i][1], style='c0.1c', color='indianred2', pen='0.5p,black')\n",
+    "    fig.savefig(filename)\n",
+    "    iframe += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "6c947853-859f-4cd3-99d1-162088189350",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], dtype=int64)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knot_positions_list[0][:i,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8692e58-ed41-4280-a724-be0804f3e41d",
    "metadata": {},
    "outputs": [],
    "source": []
