--- a/dec10/dec10.ipynb
+++ b/dec10/dec10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 182,
    "id": "15f196e8-254d-4dcc-9125-565171048a7e",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 183,
    "id": "347b2ed6-c10a-44d6-adc9-f7c0c1215ce6",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 184,
    "id": "dde1aa25-4b6f-4280-aea8-8655427b8bd1",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 185,
    "id": "184971b4-1493-4bba-98b8-16b84886b503",
    "metadata": {},
    "outputs": [
@@ -96,18 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "7cf4c8dd-8eb1-44d2-8103-195f50d4f031",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nx = 40\n",
-    "ny = 6\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 187,
    "id": "8f0a17b3-9a7f-414c-983b-58decdb79713",
    "metadata": {},
    "outputs": [],
@@ -116,12 +105,12 @@
     "for cycle in range(1, len(x_history)):\n",
     "    for x_sprite in [cycle-1, cycle, cycle+1]:\n",
     "        if x_sprite%40 == x_history[cycle]:\n",
-    "            output_signal[cycle] = 1\n"
+    "            output_signal[cycle] = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 188,
    "id": "653369d1-786d-41dd-8f8e-11b8c2309e06",
    "metadata": {},
    "outputs": [
