--- a/dec14/dec14.ipynb
+++ b/dec14/dec14.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 366,
    "id": "36715117-a033-40d1-bd98-6ef7202865f0",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import numpy as np\n",
     "import pygmt\n",
     "import xarray as xr\n",
+    "from skimage.transform import resize\n",
     "from numpngw import write_png"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 371,
    "id": "d34bed79-bb8f-482c-8d84-ca5ec7af3729",
    "metadata": {},
    "outputs": [],
@@ -92,13 +93,15 @@
     "            print(\"No change to grid after n_sand = \", n_sand)\n",
     "            break\n",
     "        filename = f'pngs/{n_sand:05d}.png'\n",
-    "        write_png(filename, np.array(127*g2[448:513,2:174].T, dtype='uint8'))\n",
+    "        image = np.array(127*g2[448:513,2:174].T, dtype='uint8')\n",
+    "        resized_image = resize(image, 4*np.array(np.shape(image)), order=0, preserve_range=True)\n",
+    "        write_png(filename, resized_image)\n",
     "    return g2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 372,
    "id": "aa5c980b-43d2-4c2d-bcc6-dc91fcc21ff9",
    "metadata": {},
    "outputs": [],
@@ -109,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 373,
    "id": "a1c53dcf-ce77-41f1-8963-b4837612b47d",
    "metadata": {},
    "outputs": [
@@ -182,24 +185,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 365,
    "id": "7a76e5e5-2287-4221-b0c2-fb9df2eb10aa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11"
-      ]
-     },
-     "execution_count": 323,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ymax"
+    "from skimage.transform import resize"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3358c186-4f9e-4d4e-81b7-f1093d2f52a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
